# opencv_static_build_cpp_cmake_example_project

./: .gitignore  ADTconfig.h.in  CMakeLists.txt  build.py  config.json
res/: config.h.in
src/: main.cc
